--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "test": "nx test"
   },
   "private": true,
-  "dependencies": {},
   "devDependencies": {
-    "nx": "14.8.3",
     "@nrwl/cli": "14.8.3",
+    "@nrwl/react": "14.8.3",
     "@nrwl/workspace": "14.8.3",
-    "typescript": "~4.8.2",
-    "prettier": "^2.6.2"
+    "@nxext/capacitor": "14.0.0",
+    "@nxext/ionic-react": "14.0.0",
+    "nx": "14.8.3",
+    "prettier": "^2.6.2",
+    "typescript": "~4.8.2"
   }
 }
