--- a/.github/workflows/build-web.yml
+++ b/.github/workflows/build-web.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [ "dev" ]
 
+env:
+  IONIC_CLOUD_VERSION: 0.6.4
+  IONIC_TOKEN: ${{ secrets.IONIC_TOKEN }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,7 +18,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install Ionic Cloud CLI
-        run: export IONIC_CLOUD_VERSION=0.6.4; curl -fsSL https://ionic.io/get-ionic-cloud-cli | bash
+        run: curl -fsSL https://ionic.io/get-ionic-cloud-cli | bash
 
       - name: Run web build
-        run: export IONIC_TOKEN=${{ secrets.IONIC_TOKEN }}; ionic-cloud build web --app-id=2af5f90b --commit=$GITHUB_SHA
+        run: ionic-cloud build web --app-id=2af5f90b --commit=${{ github.event.pull_request.head.sha }}
